Adding some css to make the text center align
Not finish but just need to commit as this will be sent to rw

--- a/sections/section-hero-countdown.html
+++ b/sections/section-hero-countdown.html
@@ -3,7 +3,6 @@
         .timer-div {
             display: flex;
             align-items: center;
-            width: 100%;
             justify-content: center;
 
                 & .counter {
@@ -71,12 +70,25 @@
             background-repeat: no-repeat;
             background-size: cover;
             position: relative;
+            text-align: center;
+
+            & .hero-ct-text-con{
+                padding: 30px 0 0;
+
+                & h1{
+                    font-size: 3rem;
+                }
+            }
         }
     </style>
     <section class="hero-ctdown-page">
         <div class="hero-ct-banner">
-            <div class="her0-ct-text-con">
+            <div class="hero-ct-text-con">
                 <h1>This Week Competitions!</h1>
+            </div>
+            <div class="footer-mesage">
+                <h1>Lorem ipsum odor amet, consectetuer adipiscing elit.</h1>
+                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Augue hendrerit vel a imperdiet tristique.</p>
             </div>
             <div class="timer-div">
                 <div class="counter timer">
@@ -100,10 +112,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="footer-mesage">
-                <h1>Lorem ipsum odor amet, consectetuer adipiscing elit.</h1>
-                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Augue hendrerit vel a imperdiet tristique.</p>
             </div>
         </div>
     </section>
