--- a/sections/section-hero-countdown.html
+++ b/sections/section-hero-countdown.html
@@ -1,9 +1,8 @@
 <body>
     <style>
         .timer-div {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            width: fit-content;
+            margin: 0 auto;
 
                 & .counter {
                     display: flex;
@@ -11,7 +10,7 @@
                     align-items: center;
                     justify-content: center;
                     margin: 3rem 0;
-                    width: 100%;
+                    width: fit-content;
                     max-width: 400px;
 
                     & .counter-boxes {
@@ -24,7 +23,7 @@
 
                     & .title {
                         color: #9c9c9c;
-                        font-size: 1rem;
+                        font-size: 1.5rem;
                         font-weight: 700;
                         letter-spacing: 2px;
                         text-transform: uppercase;
@@ -71,12 +70,15 @@
             background-size: cover;
             position: relative;
             text-align: center;
+            height: fit-content;
+            padding: 40px 0;
 
             & .hero-ct-text-con{
-                padding: 30px 0 0;
-
+                padding: 0;
                 & h1{
                     font-size: 3rem;
+                    margin: 0;
+                    padding: 15px 0 0;
                 }
             }
         }
